add haproxy DNS resolvers

--- a/templates/etc/haproxy/haproxy.cfg.j2
+++ b/templates/etc/haproxy/haproxy.cfg.j2
@@ -8,6 +8,8 @@ defaults
 
 {% include 'userlist.cfg.j2' %}
 
+{% include 'resolvers.cfg.j2' %}
+
 {% include 'listen.cfg.j2' %}
 
 {% include 'frontend.cfg.j2' %}
